<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_title">Syslog-ng Monitor</string>
    <string name="app_name">Syslog-ng-Monitor-Android</string>
    <string name="add_syslogng_title">Enter the Syslog-ng details you want to save and connect</string>
    <string name="add_syslogng">Add Syslog-ng</string>
    <string name="add_syslogngs">Add Syslog-ng(s)</string>
    <string name="select_command">Select Command</string>
    <string name="run_command">Run Command</string>
    <string name="host_hint">Enter Hostname</string>
    <string name="port_hint">Enter Port Number</string>
    <string name="syslogng_name_hint">Enter Syslog-ng Name</string>
    <string name="empty_text"></string>
    <string name="stats">stats</string>
    <string name="is_alive">is_alive</string>
    <string name="show_config">show_config</string>
    <string name="msgwindow_close_button">Close</string>
    <string name="title_activity_temp_connector">TempConnector</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Welcome to Syslog-ng Monitor application \n Start monitoring by adding the Syslog-ng(s). </string>
   
    <string name="about">About</string>
    <string name="import_certificate">Import Certificate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tbi">To be implemented</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="result">Results</string>
    <string name="error">Error</string>
    <string name="welcome_fragment">Welcome</string>

    <string-array name="menu_array">
        <item>Welcome</item>
        <item>Import Certificate</item>
        <item>Add/Update Syslog-ng to monitor</item>
        <item>Monitored Syslog-ng(s)</item>
        <item>About</item>
    </string-array>
    <string-array name="command_array">
        <item>stats</item>
        <item>is_alive</item>
        <item>show_config</item>
    </string-array>

    <string name="title_activity_result">ResultActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="insert_syslogng_success">Syslog-ng successfully added into Database</string>
    <string name="insert_syslogng_failure">There was a problem occurred in adding Syslog-ng</string> 
    <string name="port_error">Port entered is not a Number</string>
    <string name="host_port_error">Enter valid host/port details</string>
    
    
    
    
    <string name="command_task_progress_dialog">Executing the command. Please wait</string>
    
    
    <!-- Import Certificate Fragment -->
    
    <string name="ic_title"> Import the Certificate in pkcs12 format</string>
    <string name="ic_file_hint"> Filename for storing</string>
	<string name="ic_file_select_btn">Select Certificate</string>
	<string name="ic_import_btn">Import</string>
	<string name="ic_selected_file"></string>
	<string name="ic_import">Import</string>
	<string name="selected_file">Selected File : </string>
	<string name="ic_destination_file_err">Enter a valid input file path / destination file name</string>
	<string name="ic_import_success">Successfully Imported</string>
	<string name="ic_import_failure">Import Failed</string>
	<string name="file_manager_err">No file manager is installed</string>
	
	<!-- Run Command Related - Newly Added -->
	
	<string name="rc_checkbox">Include Client Certificate</string>
	<string name="rc_certificatepass_hint">Enter password</string>
	<string name="rc_certificatepass_err">Password is empty</string>
	
	<!-- View Instance Fragment -->
	
	<string name="delete_success">Deleted Successfully</string>
    <string name="delete_failure">Some problem occurred in deleting Syslog-ng</string>
    <string name="edit_success">Edited Successfully</string>
    <string name="edit_failure">Some problem occurred in editing Syslog-ng</string>
    <string name="edit_validation_failure">Select any one Syslog-ng for editing</string>
    
    <!-- Command Dialog  -->
    <string name="radio_stats">stats</string>
    <string name="radio_is_alive">is_alive</string>
    <string name="radio_show_config">show_config</string>
    
    <!-- About Fragment -->
    <string name="about_syslogng">Syslog-ng is an open source implementation of the Syslog protocol for Unix and Unix-like systems. It extends the original syslogd model with content-based filtering, rich filtering capabilities, flexible configuration options and adds important features to syslog, like using TCP for transport.</string>
    <string name="about_syslogng_monitor">This application Syslog-ng Monitor for Android is useful in monitoring Syslog-ng(s). With this application, you can execute various commands to know whether the monitored Syslog-ng is alive, get current statistics of Syslog-ng(s), and to view the configuration of Syslog-ng. In this application you can add/store details of Syslog-ng(s) to monitor with ease. You can also edit and delete the details listed after storing. After storing the details you can perform the above mentioned commands on single click.</string>
    
</resources>
