<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btn_select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ic_file_select_btn" />

    <EditText
        android:id="@+id/et_import_certificate_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_select_file"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:hint="@string/ic_file_hint"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_import_certificate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_import_certificate_filename"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/ic_title" />

    <TextView
        android:id="@+id/tv_import_certificate_selected_file"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_select_file"
        android:layout_marginTop="30dp"
        android:text="@string/ic_selected_file" />

</RelativeLayout>
