<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
    
    
    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/empty_text" />
    
     <Button
        android:id="@+id/closeWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/msgwindow_close_button" />

     <Button
         android:id="@+id/is_alive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/stats"
         android:layout_centerHorizontal="true"
         android:text="@string/is_alive" />

     <Button
         android:id="@+id/show_config"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/is_alive"
         android:layout_alignRight="@+id/msgTextView"
         android:layout_toRightOf="@+id/is_alive"
         android:text="@string/show_config" />

     <Button
         android:id="@+id/stats"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/closeWindowButton"
         android:layout_alignLeft="@+id/msgTextView"
         android:layout_marginBottom="19dp"
         android:layout_toLeftOf="@+id/is_alive"
         android:text="@string/stats" />
    
</RelativeLayout>
