<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
    
    
    <EditText
        android:id="@+id/ai_et_syslogng_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ai_et_syslogng_input"
        android:layout_marginBottom="25dp"
        android:layout_alignStart="@+id/ai_et_port_input"
        android:layout_alignEnd="@+id/ai_et_port_input"
        android:layout_alignRight="@+id/ai_et_port_input"
        android:layout_alignLeft="@+id/ai_et_port_input"
        android:ems="10"
        android:hint="@string/syslogng_name_hint"
        android:imeOptions="actionNext"
        android:singleLine="true">
          <requestFocus />
     </EditText>
    
    <EditText
        android:id="@+id/ai_et_syslogng_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ai_et_port_input"
        android:layout_alignStart="@+id/ai_et_port_input"
        android:layout_alignEnd="@+id/ai_et_port_input"
        android:layout_alignRight="@+id/ai_et_port_input"
        android:layout_alignLeft="@+id/ai_et_port_input"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/host_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
         />
    
    <EditText
        android:id="@+id/ai_et_port_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ai_cb_include_certificate"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/port_hint"
        android:imeOptions="actionDone"
        android:singleLine="true" >

       
    </EditText>
    
     
    
    
    

   

    <CheckBox
        android:id="@+id/ai_cb_include_certificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/rc_checkbox" />

    <Spinner
        android:id="@+id/ai_spinner_certificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ai_et_port_input"
        android:layout_alignStart="@+id/ai_et_port_input"
        android:layout_alignRight="@+id/ai_et_port_input"
        android:layout_alignEnd="@+id/ai_et_port_input"
        android:layout_below="@+id/ai_cb_include_certificate"
        android:layout_marginTop="25dp"
        />

   
    <EditText
        android:id="@+id/ai_et_certificate_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ai_spinner_certificate"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:ems="10" 
        android:hint="@string/rc_certificatepass_hint"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <LinearLayout 
    android:id="@+id/LinearLayout02" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    style="?android:attr/buttonBarButtonStyle"
    android:layout_alignParentBottom="true">

     <Button
         android:id="@+id/ai_btn_save_syslogng"
         
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.85"
         android:text="@string/add_syslogng"
         android:textSize="15sp" />

     <Button
         android:id="@+id/ai_btn_import_certificate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.65"
         android:text="@string/import_certificate"
         android:textSize="15sp" 
         />
    </LinearLayout>

</RelativeLayout>